// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderStyle Should parse (border-dashed) correctly 1`] = `
Object {
  "borderStyle": "dashed",
}
`;

exports[`borderStyle Should parse (border-dotted) correctly 1`] = `
Object {
  "borderStyle": "dotted",
}
`;

exports[`borderStyle Should parse (border-solid) correctly 1`] = `
Object {
  "borderStyle": "solid",
}
`;
